...
                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Player X Wons" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tfT-oZ-eAo">
                                <rect key="frame" x="20" y="142" width="374" height="67"/>
                                <accessibility key="accessibilityConfiguration" identifier="winner_label"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="67" id="hKq-ez-IoR"/>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="132" height="132"/>
                                                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="0_0"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="Ur6-1O-LLT" secondAttribute="height" multiplier="1:1" id="FmA-bq-OYo"/>
...
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="0_1"/>
                                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="80"/>
                                                        <connections>
...
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="0_2"/>
                                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="80"/>
                                                        <connections>
...
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="1_0"/>
                                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="80"/>
                                                        <connections>
...
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="1_1"/>
                                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="80"/>
                                                        <connections>
...
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="1_2"/>
                                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="80"/>
                                                        <connections>
...
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="2_0"/>
                                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="80"/>
                                                        <connections>
...
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="2_1"/>
                                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="80"/>
                                                        <connections>
...
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="2_2"/>
                                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="80"/>
                                                        <connections>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Tic Tac Toe" leftItemsSupplementBackButton="YES" id="hlb-Gs-nMQ"/>
                    <connections>
                        <outlet property="buttonEight" destination="Xj8-Hm-Fdr" id="NSn-yZ-9Hh"/>
...
